--- a/package.json
+++ b/package.json
@@ -1,15 +1,49 @@
 {
   "name": "mtgcb-web",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "cypress:open": "cypress open --env NEXT_PUBLIC_CYPRESS_MTGCB_API_URL=http://localhost:3000/leyline/api"
   },
   "dependencies": {
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@types/js-cookie": "2.2.6",
+    "axios": "0.20.0",
+    "clsx": "1.1.1",
+    "fontsource-roboto": "3.0.3",
+    "formik": "2.1.5",
     "next": "9.5.2",
+    "notistack": "1.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "5.1.1",
+    "uuid": "8.3.1",
+    "yup": "0.29.3"
+  },
+  "devDependencies": {
+    "@types/node": "14.6.0",
+    "@types/react": "16.9.46",
+    "@types/yup": "0.29.8",
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
+    "babel-eslint": "10.1.0",
+    "cypress": "5.3.0",
+    "eslint": "7.7.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-html": "6.0.3",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.2",
+    "eslint-plugin-react-hooks": "4.1.0",
+    "prettier": "2.0.5",
+    "typescript": "3.9.7"
   }
 }
