--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
-    "@types/js-cookie": "2.2.6",
+    "@material-ui/lab": "4.0.0-alpha.57",
+    "@reduxjs/toolkit": "1.5.0",
     "axios": "0.20.0",
     "clsx": "1.1.1",
     "fontsource-roboto": "3.0.3",
@@ -22,28 +23,33 @@
     "notistack": "1.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-lazyload": "3.2.0",
+    "react-redux": "7.2.2",
     "styled-components": "5.1.1",
     "uuid": "8.3.1",
     "yup": "0.29.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "2.2.6",
     "@types/node": "14.6.0",
     "@types/react": "16.9.46",
-    "@types/yup": "0.29.8",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
+    "@types/react-redux": "7.1.16",
+    "@types/styled-components": "5.1.7",
+    "@types/yup": "0.29.11",
+    "@typescript-eslint/eslint-plugin": "4.15.1",
+    "@typescript-eslint/parser": "4.15.1",
     "babel-eslint": "10.1.0",
     "cypress": "5.3.0",
-    "eslint": "7.7.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-html": "6.0.3",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.21.2",
-    "eslint-plugin-react-hooks": "4.1.0",
-    "prettier": "2.0.5",
+    "eslint": "7.20.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-html": "6.1.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "prettier": "2.2.1",
     "typescript": "3.9.7"
   }
 }
