--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "mtgcb-web",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "check-types": "tsc --noemit",
     "cypress:open": "cypress open --env NEXT_PUBLIC_CYPRESS_MTGCB_API_URL=http://localhost:3000/leyline/api"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@reduxjs/toolkit": "1.5.0",
     "axios": "0.20.0",
