--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": [
+      "cypress"
+    ]
   },
   "include": [
     "next-env.d.ts",
@@ -24,6 +27,7 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.ts"
   ]
 }
