--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtgcb-web",
-  "version": "0.14.0",
+  "version": "0.16.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-lazyload": "3.2.0",
     "react-redux": "7.2.2",
+    "react-table": "7.7.0",
     "styled-components": "5.1.1",
     "uuid": "8.3.1",
     "yup": "0.29.3"
@@ -35,6 +36,7 @@
     "@types/node": "14.6.0",
     "@types/react": "16.9.46",
     "@types/react-redux": "7.1.16",
+    "@types/react-table": "7.7.5",
     "@types/styled-components": "5.1.7",
     "@types/yup": "0.29.11",
     "@typescript-eslint/eslint-plugin": "4.15.1",
@@ -51,6 +53,7 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.1",
+    "prettier-plugin-organize-imports": "2.3.4",
     "typescript": "3.9.7"
   }
 }
