--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start -p 4000",
+    "start": "next start -p $PORT",
+    "start:local": "next start -p 4000",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "check-types": "tsc --noemit",
