--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "notistack": "1.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-is": "17.0.2",
     "react-lazyload": "3.2.0",
     "react-redux": "7.2.2",
     "react-table": "7.7.0",
+    "redux": "4.1.2",
     "styled-components": "5.1.1",
     "uuid": "8.3.1",
     "yup": "0.29.3"
