feat: add sentry.io, update packages, misc fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtgcb-web",
-  "version": "0.30.0",
+  "version": "0.31.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
@@ -17,23 +17,24 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@reduxjs/toolkit": "1.6.2",
-    "axios": "0.20.0",
+    "@sentry/nextjs": "6.16.1",
+    "axios": "0.24.0",
     "clsx": "1.1.1",
-    "fontsource-roboto": "3.0.3",
-    "formik": "2.1.5",
+    "fontsource-roboto": "4.0.0",
+    "formik": "2.2.9",
     "lodash.debounce": "4.0.8",
-    "next": "9.5.2",
+    "next": "12.0.7",
     "notistack": "1.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-lazyload": "3.2.0",
-    "react-redux": "7.2.2",
+    "react-redux": "7.2.6",
     "react-table": "7.7.0",
     "redux": "4.1.2",
-    "styled-components": "5.1.1",
-    "uuid": "8.3.1",
-    "yup": "0.29.3"
+    "styled-components": "5.3.3",
+    "uuid": "8.3.2",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/js-cookie": "2.2.6",
