--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "cypress:open": "cypress open --env NEXT_PUBLIC_CYPRESS_MTGCB_API_URL=http://localhost:3000/leyline/api"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.57",
+    "@material-ui/lab": "4.0.0-alpha.60",
     "@reduxjs/toolkit": "1.8.0",
     "@sentry/nextjs": "6.16.1",
     "axios": "0.24.0",
     "clsx": "1.1.1",
     "fontsource-roboto": "4.0.0",
     "formik": "2.2.9",
+    "is-mobile": "3.1.1",
     "lodash.debounce": "4.0.8",
     "next": "12.0.7",
     "notistack": "1.0.1",
