--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-table": "7.7.0",
     "redux": "4.1.2",
     "styled-components": "5.3.3",
+    "ua-parser-js": "1.0.2",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
@@ -44,6 +45,7 @@
     "@types/react-redux": "7.1.23",
     "@types/react-table": "7.7.5",
     "@types/styled-components": "5.1.7",
+    "@types/ua-parser-js": "0.7.36",
     "@types/yup": "0.29.11",
     "@typescript-eslint/eslint-plugin": "4.15.1",
     "@typescript-eslint/parser": "4.15.1",
