--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtgcb-web",
-  "version": "0.51.0",
+  "version": "0.52.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
@@ -32,6 +32,7 @@
     "react-is": "17.0.2",
     "react-lazyload": "3.2.0",
     "react-redux": "7.2.6",
+    "react-scroll": "1.8.9",
     "react-table": "7.7.0",
     "redux": "4.1.2",
     "styled-components": "5.3.3",
