--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "notistack": "1.0.1",
     "qs": "6.11.0",
     "react": "17.0.2",
+    "react-confetti": "6.1.0",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-lazyload": "3.2.0",
