feat: add image caching control

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,2 @@
-MTGCB_API_URL="http://localhost:3000/leyline/api"
+NEXT_PUBLIC_MTGCB_API_URL="http://localhost:3000/leyline/api"
+IMAGE_CACHE_DATE="20241120"
